udpating demo, fix clear canvas bugs

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 	<title>jQuery Signature Plugin</title>
 	<!-- Styles -->
 	<style>
-		html, body {
-			margin: 0;
-			padding: 0;
-		}
 		.container {
-			max-width: 1280px;
+			max-width: 960px;
 			margin: auto;
+		}
+		.center {
 			text-align: center;
 		}
 	</style>
@@ -19,21 +17,71 @@
 <body>
 <!-- Body Content -->
 <div class="container">
-	<h1>jQuery Signature</h1>
-	<p>Create a new signature field with <code>$('.js-signature').jqSignature();</code></p>
+	<div class="center">
+		<h1>jQuery Signature</h1>
+		<h3>A jQuery plugin for creating touch-friendly signature fields using the HTML5 canvas.</h3>
+	</div>
+
+	<h2>Basic Example</h2>
+	<p>Sign Below:</p>
 	<div class="js-signature"></div>
+
+	<h2>Usage</h2>
+	<p>First, create a placeholder &lt;div&gt; for the signature canvas:</p>
+	<p><code>&lt;div class='js-signature'&gt;&lt;/div&gt;</code></p>
+	<p>Next, initialize the plugin in JavaScript:</p>
+	<p><code>$('.js-dropdown').jqSignature();</code></p>
+
+	<h2>Options</h2>
+	<p>Configuration options can be set with the options parameter or through data-attributes.</p>
+	<table>
+		<thead>
+			<tr><td>Option</td><td>Description</td><td>Data Attribute</td><td>Options Example</td></tr>
+		</thead>
+		<tbody>
+			<tr><td><strong>Width</strong></td><td>The width of the signature canvas (in pixels). <em>Default: 300</em></td><td><code>data-width="600"</td><td><code>$().jqSignature({width: 600});</code></td></tr>
+			<tr><td><strong>Height</strong></td><td>The height of the signature canvas (in pixels). <em>Default: 100</em></td><td><code>data-height="200"</td><td><code>$().jqSignature({height: 200});</code></td></tr>
+			<tr><td><strong>Line Color</strong></td><td>The color of the signature (as hex). <em>Default: '#222222'</em></td><td><code>data-line-color="#ABCDEF"</td><td><code>$().jqSignature({lineColor: '#ABCDEF'});</code></td></tr>
+			<tr><td><strong>Line Width</strong></td><td>The width of the signature line (in pixels). <em>Default: 1</em></td><td><code>data-line-width="2"</td><td><code>$().jqSignature({lineWidth: 2});</code></td></tr>
+		</tbody>
+	</table>
+
+	<h2>Methods</h2>
+	<ul>
+		<li><code>$().jqSignature('clearCanvas');</code> - Clears the signature canvas.</li>
+		<li><code>$().jqSignature('getDataURL');</code> - Get the contents of the signature canvas as a base64 data URL.</li>
+	</ul>
+
+	<h2>Complete Example</h2>
+	<p>Sign Below:</p>
+	<div class="js-signature" data-width="600" data-height="200" data-line-color="#bc0000"></div>
+	<p><button onclick="clearCanvas();">Clear Canvas</button>&nbsp;<button onclick="saveSignature();">Save Signature</button></p>
+	<div id="signature"></div>
+	<script>
+		function clearCanvas() {
+			$('#signature').empty();
+			$('.js-signature').eq(1).jqSignature('clearCanvas');
+		}
+
+		function saveSignature() {
+			$('#signature').empty();
+			var dataUrl = $('.js-signature').eq(1).jqSignature('getDataURL');
+			var img = $('<img>').attr('src', dataUrl);
+			$('#signature').append($('<p>').text("Here's your signature"));
+			$('#signature').append(img);
+		}
+	</script>
+
+	<br><br>
 </div>
 <!-- Scripts -->
 <script src="jquery-2.1.4.js"></script>
 <script src="jq-signature.js"></script>
 <script>
 	$(document).on('ready', function() {
-		$('.js-signature').jqSignature({
-			width: 600,
-			height: 200,
-			lineColor: '#bc0000',
-			lineWidth: 1
-		});
+		if ($('.js-signature').length) {
+			$('.js-signature').jqSignature();
+		}
 	});
 </script>
 </body>
