--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 			font-size: 16px;
 			font-family: Arial;
 		}
+		.site-title {
+			margin: 1em 0;
+		}
 		.center {
 			text-align: center;
 		}
@@ -28,7 +31,7 @@
 
 	<div class="row center">
 		<div class="col-xs-12">
-			<h1>jQuery Signature</h1>
+			<h1 class="site-title">jQuery Signature</h1>
 			<h4>A jQuery plugin for creating touch-friendly signature fields using the HTML5 canvas.</h4>
 		</div>
 	</div>
