--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="col-xs-12">
+		<h3>Installation</h3>
+			<p>Download the file and include it in your HTML page. Bower package coming eventually!</p>
+			<ul>
+				<li>Development, uncompressed: <a href="https://raw.githubusercontent.com/bencentra/jq-signature/master/jq-signature.js">jq-signature.js</a></li>
+				<li>Production, compressed: <a href="https://raw.githubusercontent.com/bencentra/jq-signature/master/jq-signature.min.js">jq-signature.min.js</a></li>
+			</ul>
+		</div>
+	</div>
+
 
 	<div class="row">
 		<div class="col-xs-12">
@@ -67,6 +78,7 @@
 					<tr><td><strong>Width</strong></td><td>The width of the signature canvas (in pixels). <em>Default: 300</em></td><td><code>data-width="600"</td><td><code>$().jqSignature({width: 600});</code></td></tr>
 					<tr><td><strong>Height</strong></td><td>The height of the signature canvas (in pixels). <em>Default: 100</em></td><td><code>data-height="200"</td><td><code>$().jqSignature({height: 200});</code></td></tr>
 					<tr><td><strong>Border</strong></td><td>The CSS for the border of the canvas. <em>Default: '1px solid #AAAAAA'</em></td><td><code>data-border="1px solid red"</td><td><code>$().jqSignature({border: '1px solid red'});</code></td></tr>
+					<tr><td><strong>Background</strong></td><td>The CSS for the background of the canvas. <em>Default: '#FFFFFF'</em></td><td><code>data-background="#EEEEEE"</td><td><code>$().jqSignature({background: '#EEEEEE'});</code></td></tr>
 					<tr><td><strong>Line Color</strong></td><td>The color of the signature (as hex). <em>Default: '#222222'</em></td><td><code>data-line-color="#ABCDEF"</td><td><code>$().jqSignature({lineColor: '#ABCDEF'});</code></td></tr>
 					<tr><td><strong>Line Width</strong></td><td>The width of the signature line (in pixels). <em>Default: 1</em></td><td><code>data-line-width="2"</td><td><code>$().jqSignature({lineWidth: 2});</code></td></tr>
 					<tr><td><strong>Auto Fit</strong></td><td>Make the canvas fill the width of its parent element. <em>Default: false</em></td><td><code>data-auto-fit="true"</td><td><code>$().jqSignature({autoFit: true});</code></td></tr>
@@ -89,25 +101,11 @@
 		<div class="col-xs-12">
 			<h3>Complete Example</h3>
 			<p>Sign Below:</p>
-			<div class="js-signature" data-width="600" data-height="200" data-border="1px dotted black" data-line-color="#bc0000" data-auto-fit="true"></div>
-			<p><button class="btn btn-default" onclick="clearCanvas();">Clear Canvas</button>&nbsp;<button class="btn btn-default" onclick="saveSignature();">Save Signature</button></p>
+			<div class="js-signature" data-width="600" data-height="200" data-border="1px solid black" data-line-color="#bc0000" data-auto-fit="true"></div>
+			<p><button id="clearBtn" class="btn btn-default" onclick="clearCanvas();">Clear Canvas</button>&nbsp;<button id="saveBtn" class="btn btn-default" onclick="saveSignature();" disabled>Save Signature</button></p>
 			<div id="signature">
 				<p><em>Your signature will appear here when you click "Save Signature"</em></p>
 			</div>
-			<script>
-				function clearCanvas() {
-					$('#signature').html('<p><em>Your signature will appear here when you click "Save Signature"</em></p>');
-					$('.js-signature').eq(1).jqSignature('clearCanvas');
-				}
-
-				function saveSignature() {
-					$('#signature').empty();
-					var dataUrl = $('.js-signature').eq(1).jqSignature('getDataURL');
-					var img = $('<img>').attr('src', dataUrl);
-					$('#signature').append($('<p>').text("Here's your signature:"));
-					$('#signature').append(img);
-				}
-			</script>
 		</div>
 	</div>
 
@@ -129,6 +127,28 @@
 		if ($('.js-signature').length) {
 			$('.js-signature').jqSignature();
 		}
+	});
+
+	/*
+	* Demo
+	*/
+
+	function clearCanvas() {
+		$('#signature').html('<p><em>Your signature will appear here when you click "Save Signature"</em></p>');
+		$('.js-signature').eq(1).jqSignature('clearCanvas');
+		$('#saveBtn').attr('disabled', true);
+	}
+
+	function saveSignature() {
+		$('#signature').empty();
+		var dataUrl = $('.js-signature').eq(1).jqSignature('getDataURL');
+		var img = $('<img>').attr('src', dataUrl);
+		$('#signature').append($('<p>').text("Here's your signature:"));
+		$('#signature').append(img);
+	}
+
+	$('.js-signature').eq(1).on('jq.signature.changed', function() {
+		$('#saveBtn').attr('disabled', false);
 	});
 </script>
 </body>
