--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<h4>A jQuery plugin for creating touch-friendly signature fields using the HTML5 canvas.</h4>
 		</div>
 	</div>
-	
+
 	<div class="row">
 		<div class="col-xs-12">
 			<h3>Basic Example</h3>
@@ -71,7 +71,7 @@
 			<p>First, create a placeholder &lt;div&gt; for the signature canvas:</p>
 			<p><code>&lt;div class='js-signature'&gt;&lt;/div&gt;</code></p>
 			<p>Next, initialize the plugin in JavaScript:</p>
-			<p><code>$('.js-dropdown').jqSignature();</code></p>
+			<p><code>$('.js-signature').jqSignature();</code></p>
 		</div>
 	</div>
 
@@ -79,20 +79,22 @@
 		<div class="col-xs-12">
 			<h3>Options</h3>
 			<p>Configuration options can be set with the options parameter or through data-attributes.</p>
-			<table class="table table-striped">
-				<thead>
-					<tr><td>Option</td><td>Description</td><td>Data Attribute</td><td>Options Example</td></tr>
-				</thead>
-				<tbody>
-					<tr><td><strong>Width</strong></td><td>The width of the signature canvas (in pixels). <em>Default: 300</em></td><td><code>data-width="600"</td><td><code>$().jqSignature({width: 600});</code></td></tr>
-					<tr><td><strong>Height</strong></td><td>The height of the signature canvas (in pixels). <em>Default: 100</em></td><td><code>data-height="200"</td><td><code>$().jqSignature({height: 200});</code></td></tr>
-					<tr><td><strong>Border</strong></td><td>The CSS for the border of the canvas. <em>Default: '1px solid #AAAAAA'</em></td><td><code>data-border="1px solid red"</td><td><code>$().jqSignature({border: '1px solid red'});</code></td></tr>
-					<tr><td><strong>Background</strong></td><td>The CSS for the background of the canvas. <em>Default: '#FFFFFF'</em></td><td><code>data-background="#EEEEEE"</td><td><code>$().jqSignature({background: '#EEEEEE'});</code></td></tr>
-					<tr><td><strong>Line Color</strong></td><td>The color of the signature (as hex). <em>Default: '#222222'</em></td><td><code>data-line-color="#ABCDEF"</td><td><code>$().jqSignature({lineColor: '#ABCDEF'});</code></td></tr>
-					<tr><td><strong>Line Width</strong></td><td>The width of the signature line (in pixels). <em>Default: 1</em></td><td><code>data-line-width="2"</td><td><code>$().jqSignature({lineWidth: 2});</code></td></tr>
-					<tr><td><strong>Auto Fit</strong></td><td>Make the canvas fill the width of its parent element. <em>Default: false</em></td><td><code>data-auto-fit="true"</td><td><code>$().jqSignature({autoFit: true});</code></td></tr>
-				</tbody>
-			</table>
+			<div class="table-responsive">
+				<table class="table table-striped">
+					<thead>
+						<tr><td>Option</td><td>Description</td><td>Data Attribute</td><td>Options Example</td></tr>
+					</thead>
+					<tbody>
+						<tr><td><strong>Width</strong></td><td>The width of the signature canvas (in pixels). <em>Default: 300</em></td><td><code>data-width="600"</td><td><code>$().jqSignature({width: 600});</code></td></tr>
+						<tr><td><strong>Height</strong></td><td>The height of the signature canvas (in pixels). <em>Default: 100</em></td><td><code>data-height="200"</td><td><code>$().jqSignature({height: 200});</code></td></tr>
+						<tr><td><strong>Border</strong></td><td>The CSS for the border of the canvas. <em>Default: '1px solid #AAAAAA'</em></td><td><code>data-border="1px solid red"</td><td><code>$().jqSignature({border: '1px solid red'});</code></td></tr>
+						<tr><td><strong>Background</strong></td><td>The CSS for the background of the canvas. <em>Default: '#FFFFFF'</em></td><td><code>data-background="#EEEEEE"</td><td><code>$().jqSignature({background: '#EEEEEE'});</code></td></tr>
+						<tr><td><strong>Line Color</strong></td><td>The color of the signature (as hex). <em>Default: '#222222'</em></td><td><code>data-line-color="#ABCDEF"</td><td><code>$().jqSignature({lineColor: '#ABCDEF'});</code></td></tr>
+						<tr><td><strong>Line Width</strong></td><td>The width of the signature line (in pixels). <em>Default: 1</em></td><td><code>data-line-width="2"</td><td><code>$().jqSignature({lineWidth: 2});</code></td></tr>
+						<tr><td><strong>Auto Fit</strong></td><td>Make the canvas fill the width of its parent element. <em>Default: false</em></td><td><code>data-auto-fit="true"</td><td><code>$().jqSignature({autoFit: true});</code></td></tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</div>
 
@@ -102,6 +104,15 @@
 			<ul>
 				<li><code>$().jqSignature('clearCanvas');</code> - Clears the signature canvas.</li>
 				<li><code>$().jqSignature('getDataURL');</code> - Get the contents of the signature canvas as a base64 data URL.</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-12">
+			<h3>Events</h3>
+			<ul>
+				<li><code>jq.signature.changed</code> - Fired when the signature changes (on mouseup/touchend)</li>
 			</ul>
 		</div>
 	</div>
@@ -130,7 +141,7 @@
 </div>
 <!-- Scripts -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="jq-signature.min.js"></script>
+<script src="jq-signature.js"></script>
 <script>
 	$(document).on('ready', function() {
 		if ($('.js-signature').length) {
