update bower and npm info

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 				<li>Development, uncompressed: <a href="https://raw.githubusercontent.com/bencentra/jq-signature/master/jq-signature.js">jq-signature.js</a></li>
 				<li>Production, compressed: <a href="https://raw.githubusercontent.com/bencentra/jq-signature/master/jq-signature.min.js">jq-signature.min.js</a></li>
 			</ul>
-			<p>You can also install it via Bower:</p>
-			<p><code>bower install jq-signature</code></p>
+			<p>You can also install it via:</p>
+			<p>bower: <code>bower install jq-signature</code></p>
+			<p>npm: <code>npm install jq-signature</code></p>
 		</div>
 	</div>
 
